--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     fill: currentColor
   }
 </style>
-<svg class="logo" width="300px" height="160px" viewBox="0 0 200 107" version="1.1">
+<svg width="300px" height="160px" viewBox="0 0 200 107" version="1.1">
   <g>
     <path d="M46,9 L46,25.6243873 L22,48 L46,69 L46,87 L0,48 L46,9 Z M46,9"></path>
     <path d="M112.6,49 L130.557222,15.5544706 L152.6,0 L125.953221,48.9999989 L112.6,49 Z M112.6,49"></path>
